--- a/app/Themes/Rcac/assets/css/college.css
+++ b/app/Themes/Rcac/assets/css/college.css
@@ -2969,7 +2969,7 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-secondary {
-  color: #6c757d;
+  color: #687278;
   border-color: #6c757d;
 }
 
